# jqfr-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: scrap_jqfr.py
src/jqfr_utils/: pdf.py  sentence_segmentation.py  ssplit.py
